gcc/testsuite/rust/rustc/ui/attributes/key-value-non-ascii_dg.rs
#![feature(rustc_attrs)]

#[rustc_dummy = b"ﬃ.rs"] // { dg-error "" "" { target *-*-* } }
fn main() {}

